erDiagram

    USER {
        Long id PK
        String name
        String email
        String password
        String role
    }

    NGO {
        Long id PK
        String name
        String description
        String email
        String status
    }

    CAMPAIGN {
        Long id PK
        String title
        String description
        String category
        Double targetAmount
        Double collectedAmount
        String imageUrl
        Long ngoId FK
    }

    DONATION {
        Long id PK
        Double amount
        String donorName
        String donorEmail
        String paymentStatus
        Long userId FK
        Long campaignId FK
    }

    IMPACT_REPORT {
        Long id PK
        String title
        String description
        String imageUrl
        Double amountUsed
        Long campaignId FK
        Long ngoId FK
    }

    USER ||--o{ DONATION : makes
    NGO ||--o{ CAMPAIGN : creates
    CAMPAIGN ||--o{ DONATION : receives
    CAMPAIGN ||--o{ IMPACT_REPORT : has
    NGO ||--o{ IMPACT_REPORT : uploads